--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,12 @@
 
     <groupId>cn.dbdj1201</groupId>
     <artifactId>empty</artifactId>
+    <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
+    <modules>
+        <module>sc-registry</module>
+        <module>sc-gateway</module>
+    </modules>
 
 
     <parent>
