--- a/sc-gateway/src/main/resources/application.yml
+++ b/sc-gateway/src/main/resources/application.yml
@@ -7,6 +7,8 @@ eureka:
   client:
     registry-fetch-interval-seconds: 5
     service-url:
-      defaultZone: http://127.0.0.1:10086/eureka
+      defaultZone: http://127.0.0.1:12010/eureka
 zuul:
   prefix: /api # 路由路径前缀
+  routes:
+    item-service: /item/** # 商品微服务的映射路径
