--- a/sc-item/sc-item-interface/pom.xml
+++ b/sc-item/sc-item-interface/pom.xml
@@ -11,5 +11,16 @@
 
     <artifactId>sc-item-interface</artifactId>
 
+    <dependencies>
+        <!--        <dependency>-->
+        <!--            <groupId>tk.mybatis</groupId>-->
+        <!--            <artifactId>mapper-spring-boot-starter</artifactId>-->
+        <!--        </dependency>-->
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
