--- a/sc-item/sc-item-service/src/main/resources/application.yml
+++ b/sc-item/sc-item-service/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: item-service
   datasource:
-    url: jdbc:mysql://localhost:3306/leyou
+    url: jdbc:mysql:///db_shoppingcity?useSSL=false&useUnicode=true&characterEncoding=UTF8&serverTimezone=GMT&allowPublicKeyRetrieval=true
     username: root
     password: root
     hikari:
