--- a/sc-item/sc-item-service/pom.xml
+++ b/sc-item/sc-item-service/pom.xml
@@ -60,11 +60,16 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+        <dependency>
             <groupId>cn.dbdj1201</groupId>
             <artifactId>sc-common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+
     </dependencies>
 
 
