--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>sc-item</module>
         <module>sc-common</module>
         <module>sc-upload</module>
+        <module>ex-lucene</module>
     </modules>
 
 
