--- a/ex-lucene/pom.xml
+++ b/ex-lucene/pom.xml
@@ -50,6 +50,13 @@
             <version>8.0.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.lucene/lucene-queryparser -->
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-queryparser</artifactId>
+            <version>8.5.0</version>
+        </dependency>
+
 
     </dependencies>
 
