--- a/sc-gateway/src/main/resources/application.yml
+++ b/sc-gateway/src/main/resources/application.yml
@@ -12,5 +12,6 @@ zuul:
   prefix: /api # 路由路径前缀
   routes:
     item-service:  /item/** # 商品微服务的映射路径
+    search-service: /search/**
 #      path:  /item/**
 #      url:  http://127.0.0.1:8081
