--- a/sc-item/sc-item-interface/pom.xml
+++ b/sc-item/sc-item-interface/pom.xml
@@ -12,14 +12,20 @@
     <artifactId>sc-item-interface</artifactId>
 
     <dependencies>
-        <!--        <dependency>-->
-        <!--            <groupId>tk.mybatis</groupId>-->
-        <!--            <artifactId>mapper-spring-boot-starter</artifactId>-->
-        <!--        </dependency>-->
         <dependency>
             <groupId>javax.persistence</groupId>
             <artifactId>persistence-api</artifactId>
             <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.dbdj1201</groupId>
+            <artifactId>sc-common</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
