--- a/sc-search/pom.xml
+++ b/sc-search/pom.xml
@@ -41,6 +41,19 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.2.5.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+        <!--junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>cn.dbdj1201</groupId>
             <artifactId>sc-common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
