--- a/sc-search/src/main/resources/application.yml
+++ b/sc-search/src/main/resources/application.yml
@@ -3,6 +3,8 @@ server:
 spring:
   application:
     name: search-service
+  main:
+    allow-bean-definition-overriding: true
   data:
     elasticsearch:
       cluster-name: elasticsearch
@@ -11,6 +13,8 @@ eureka:
   client:
     service-url:
       defaultZone: http://127.0.0.1:12010/eureka
+    registry-fetch-interval-seconds: 10
+
   instance:
     lease-renewal-interval-in-seconds: 5 # 每隔5秒发送一次心跳
     lease-expiration-duration-in-seconds: 10 # 10秒不发送就过期
