--- a/sc-item/sc-item-service/src/main/resources/application.yml
+++ b/sc-item/sc-item-service/src/main/resources/application.yml
@@ -17,6 +17,6 @@ eureka:
   instance:
     lease-renewal-interval-in-seconds: 5 # 5秒钟发送一次心跳
     lease-expiration-duration-in-seconds: 10 # 10秒不发送就过期
-ribbon:
-  eureka:
-    enabled: true
+#ribbon:
+#  eureka:
+#    enabled: true
