shopping city -st sc-search category brand specs aggregation

--- a/sc-search/src/main/resources/application.yml
+++ b/sc-search/src/main/resources/application.yml
@@ -9,6 +9,8 @@ spring:
     elasticsearch:
       cluster-name: elasticsearch
       cluster-nodes: 192.168.0.103:9300
+  jackson:
+    default-property-inclusion: non_null
 eureka:
   client:
     service-url:
