shopping city -st sc-search category brand specs filter elasticsearch spring data done thymeleaf begin

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>sc-upload</module>
         <module>ex-lucene</module>
         <module>sc-search</module>
+        <module>sc-goods-web</module>
     </modules>
 
 
