--- a/sc-goods-web/pom.xml
+++ b/sc-goods-web/pom.xml
@@ -35,12 +35,31 @@
             <version>2.2.5.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.2.5.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
 
+        <!--junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.dbdj1201</groupId>
+            <artifactId>sc-common</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>cn.dbdj1201</groupId>
             <artifactId>sc-item-interface</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${sc.latest.version}</version>
         </dependency>
 
     </dependencies>
