--- a/sc-goods-web/src/main/resources/application.yml
+++ b/sc-goods-web/src/main/resources/application.yml
@@ -1,14 +1,15 @@
 server:
   port: 8084
 spring:
-#  application:
-#    name: goods-web
+  application:
+    name: goods-web
   thymeleaf:
     cache: false
 eureka:
   client:
     service-url:
       defaultZone: http://127.0.0.1:12010/eureka
+    registry-fetch-interval-seconds: 5
   instance:
     lease-renewal-interval-in-seconds: 5
     lease-expiration-duration-in-seconds: 10
