shopping city -st sc-search  thymeleaf item details 2nd

--- a/sc-goods-web/src/main/resources/application.yml
+++ b/sc-goods-web/src/main/resources/application.yml
@@ -3,6 +3,8 @@ server:
 spring:
   application:
     name: goods-web
+  main:
+    allow-bean-definition-overriding: true
   thymeleaf:
     cache: false
 eureka:
