shopping city -st sc-user 阿里短信服务。

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>ex-lucene</module>
         <module>sc-search</module>
         <module>sc-goods-web</module>
+        <module>sc-user</module>
     </modules>
 
 
