--- a/sc-goods-web/pom.xml
+++ b/sc-goods-web/pom.xml
@@ -42,6 +42,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-amqp -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+            <version>2.2.5.RELEASE</version>
+        </dependency>
+
         <!--junit -->
         <dependency>
             <groupId>junit</groupId>
