--- a/sc-item/sc-item-service/pom.xml
+++ b/sc-item/sc-item-service/pom.xml
@@ -48,6 +48,12 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-amqp -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+            <version>2.2.5.RELEASE</version>
+        </dependency>
 
         <dependency>
             <groupId>cn.dbdj1201</groupId>
