--- a/sc-search/pom.xml
+++ b/sc-search/pom.xml
@@ -33,6 +33,13 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-amqp -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+            <version>2.2.5.RELEASE</version>
+        </dependency>
+
         <!--商品微服务-->
         <dependency>
             <groupId>cn.dbdj1201</groupId>
