--- a/sc-search/src/main/resources/application.yml
+++ b/sc-search/src/main/resources/application.yml
@@ -11,6 +11,11 @@ spring:
       cluster-nodes: 192.168.0.103:9300
   jackson:
     default-property-inclusion: non_null
+  rabbitmq:
+    virtual-host: /sc
+    host: 192.168.0.103
+    username: rabbitmq
+    password: rabbitmq
 eureka:
   client:
     service-url:
