shopping city -st sc-user 阿里短信服务。2nd

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>sc-search</module>
         <module>sc-goods-web</module>
         <module>sc-user</module>
+        <module>sc-sms-service</module>
     </modules>
 
 
