--- a/sc-user/sc-user-service/src/main/resources/application.yml
+++ b/sc-user/sc-user-service/src/main/resources/application.yml
@@ -18,5 +18,19 @@ spring:
     hikari:
       max-lifetime: 28830000 # 一个连接的生命时长（毫秒），超时而且没被使用则被释放（retired），缺省:30分钟，建议设置比数据库超时时长少30秒，参考MySQL wait_timeout参数（show variables like '%timeout%';）
       maximum-pool-size: 9 # 连接池中允许的最大连接数。缺省值：10；推荐的公式：((core_count * 2) + effective_spindle_count)
+  redis:
+    host: 192.168.0.103
+    password: redis
+    port: 6379
+    timeout: 5000
+    jedis:
+      pool:
+        max-wait: -1
+  rabbitmq:
+    host: 192.168.0.103
+    username: rabbitmq
+    password: rabbitmq
+    virtual-host: /sc
+    connection-timeout: 30000
 mybatis:
   type-aliases-package: cn.dbdj1201.sc.user.pojo
