shopping city -st sc-auth-center rsa private public process

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>sc-goods-web</module>
         <module>sc-user</module>
         <module>sc-sms-service</module>
+        <module>sc-auth</module>
     </modules>
 
 
