--- a/sc-gateway/pom.xml
+++ b/sc-gateway/pom.xml
@@ -27,6 +27,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>cn.dbdj1201</groupId>
+            <artifactId>sc-common</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.dbdj1201</groupId>
+            <artifactId>sc-auth-common</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
