shopping city -st sc-cart

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>sc-user</module>
         <module>sc-sms-service</module>
         <module>sc-auth</module>
+        <module>sc-cart</module>
     </modules>
 
 
