--- a/sc-cart/pom.xml
+++ b/sc-cart/pom.xml
@@ -43,6 +43,12 @@
             <artifactId>sc-auth-common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>cn.dbdj1201</groupId>
+            <artifactId>sc-item-interface</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
