shopping city -st elastic end -dead-lock

--- a/ex-java-ee/pom.xml
+++ b/ex-java-ee/pom.xml
@@ -8,6 +8,11 @@
     <artifactId>ex-java-ee</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <java.version>11</java.version>
+    </properties>
+
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
