--- a/sc-gateway/src/main/resources/application.yml
+++ b/sc-gateway/src/main/resources/application.yml
@@ -20,7 +20,7 @@ zuul:
     connect-timeout-millis: 15000
     socket-timeout-millis: 60000
   add-host-header: true #携带请求本身的head头信息
-  sensitive-headers: null
+  sensitive-headers: # 覆盖默认敏感头信息
 sc:
   jwt:
     pubKeyPath: D:\\test\\tmp\\rsa\\rsa.pub # 公钥地址
