--- a/ex-elasticsearch/pom.xml
+++ b/ex-elasticsearch/pom.xml
@@ -17,7 +17,14 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>11</java.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <spring.starter.version>2.2.6.RELEASE</spring.starter.version>
+        <mapper.starter.version>2.1.5</mapper.starter.version>
+        <mybatis.starter.version>2.1.2</mybatis.starter.version>
+        <druid.starter.version>1.1.9</druid.starter.version>
+        <mysql.version>8.0.19</mysql.version>
+        <pageHelper.starter.version>1.2.13</pageHelper.starter.version>
     </properties>
 
     <dependencies>
@@ -36,6 +43,25 @@
             <artifactId>junit</artifactId>
             <version>4.13</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.lou</groupId>
+            <artifactId>simhasher</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring.starter.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.10</version>
         </dependency>
     </dependencies>
 
