concurrent programing -st cap1-2-3 base api

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>sc-auth</module>
         <module>sc-cart</module>
         <module>sc-order</module>
+        <module>concurrent-programing</module>
     </modules>
 
 
