--- a/concurrent-programing/pom.xml
+++ b/concurrent-programing/pom.xml
@@ -44,5 +44,13 @@
             <version>1.2.3</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.openjdk.jol/jol-core -->
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.10</version>
+        </dependency>
+
+
     </dependencies>
 </project>
