--- a/sc-sms-service/src/main/resources/application.yml
+++ b/sc-sms-service/src/main/resources/application.yml
@@ -16,10 +16,10 @@ spring:
     jedis:
       pool:
         max-wait: -1
-sc:
-  sms:
-    accessKeyId:  # 你自己的accessKeyId
-    accessKeySecret:  # 你自己的AccessKeySecret
-    signName: ShoppingCity # 签名名称
-    verifyCodeTemplate: SMS_186953758 # 模板名称
+#sc:
+#  sms:
+#    accessKeyId:  # 你自己的accessKeyId
+#    accessKeySecret:  # 你自己的AccessKeySecret
+#    signName: ShoppingCity # 签名名称
+#    verifyCodeTemplate: SMS_186953758 # 模板名称
 
