--- a/concurrent-programing/pom.xml
+++ b/concurrent-programing/pom.xml
@@ -51,6 +51,12 @@
             <version>0.10</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 </project>
